In ehci_check_qh_intr don't treat a short control transfer as done if the status phase is still inflight.  Let the hardware complete it.

PR/48358: Repeated low-speed USB control transfers returning short data
	  fail on EHCI

PR/46696: uhub disables port where USB keyboard attached